syntax = "proto3";


import "google/api/annotations.proto";
import "google/api/http.proto";


option csharp_namespace = "Routing.gRPC.Protos";

package Routing;


// Route status enum
enum RouteStatus {
  ROUTE_STATUS_PLANNED = 0;
  ROUTE_STATUS_IN_PROGRESS = 1;
  ROUTE_STATUS_DELAYED = 2;
  ROUTE_STATUS_COMPLETED = 3;
  ROUTE_STATUS_CANCELLED = 4;
}


// Routing service
service RoutingProtoService {
  rpc GetRoute (RouteRequest) returns (RouteResponse){
    option (google.api.http) = {
      get: "/v1/routes/{route_id}"
    };
  }


  rpc CreateRoute (CreateRouteRequest) returns (RouteResponse){
    option (google.api.http) = {
      post: "/v1/routes"
      body: "*"
    };
  }


  rpc UpdateRoute (UpdateRouteRequest) returns (RouteResponse) {
    option (google.api.http) = {
      put: "/v1/routes/{route_id}"
      body: "*"
    };
  }


  //rpc DeleteRoute (DeleteRouteRequest) returns (DeleteRouteResponse);
   rpc UpdateStatus (UpdateStatusRequest) returns (RouteResponse){
    option (google.api.http) = {
      patch: "/v1/routes/{route_id}/status"
      body: "*"
    };
  }
}

// Messages

message RouteRequest {
   string route_id = 1;
}

message UpdateStatusRequest {
	string route_id = 1;
	RouteStatus status = 2;
}


message CreateRouteRequest {
   string order_id = 1;
   string origin = 2;
   string destination = 3;
}

message UpdateRouteRequest {
   string route_id = 1;
   string origin = 2;
   string destination = 3;
   
}

message DeleteRouteRequest {
   string route_id = 1;
}

message DeleteRouteResponse {
   bool success = 1;
}

message RouteResponse {
   string route_id = 1;
   string order_id = 2;
   string origin = 3;
   string destination = 4;
  optional double distance_in_km = 5;
  optional string estimated_time = 6;
  optional string estimated_delivery_date = 7;
   RouteStatus status = 8;
}
